overflow fix

--- a/style.css
+++ b/style.css
@@ -1,4 +1,3 @@
-/* @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100&display=swap'); */
 @import url('https://fonts.googleapis.com/css2?family=Raleway:wght@300&display=swap');
 
 *,
@@ -92,7 +91,7 @@ input[type=checkbox],
 }
 
 .book-table-container{
-    overflow-y: scroll;
+    overflow-y: auto;
     height: 400px;
     margin-top: 3rem;
 }
